 -*- Mode: sh -*-
AC_INIT(Makeconf)

VERSION=0.8.61
AC_SUBST(VERSION)
AC_DEFINE_UNQUOTED(VERSION,"$VERSION",version number)

AC_PROG_RANLIB
AC_PROG_INSTALL

AC_CHECK_FUNC(__finite,,AC_DEFINE(__finite,finite,if __finite is missing))
AC_CHECK_FUNC(__isnan,,AC_DEFINE(__isnan,isnan,if __isnan is missing))

echo contents of confdefs.h: >&6
sed -e '/^$/d' -e 's/^/   /' confdefs.h >&6

M2_IS_DECLARED(char **,sys_errlist)
M2_IS_DECLARED(char **,h_errlist)

################ finish up
AC_CONFIG_HEADER(include/config.h)
AC_OUTPUT(
	dnl this list is the same as the one in Makefile-configure
	config.Makefile \
	Makefile \
	Macaulay2/Makefile \
	Macaulay2/m2/Makefile \
	Macaulay2/ComputationsBook/Makefile \
	Macaulay2/ComputationsBook/book/Makefile \
	Macaulay2/ComputationsBook/chapters/TEMPLATE/Makefile \
	Macaulay2/ComputationsBook/chapters/authorInstructions/Makefile \
	Macaulay2/ComputationsBook/chapters/completeIntersections/Makefile \
	Macaulay2/ComputationsBook/chapters/d-modules/Makefile \
	Macaulay2/ComputationsBook/chapters/sample1/Makefile \
	Macaulay2/ComputationsBook/chapters/sample2/Makefile \
	Macaulay2/ComputationsBook/chapters/schemes/Makefile \
	Macaulay2/ComputationsBook/chapters/solving/Makefile \
	Macaulay2/ComputationsBook/inputs/Makefile \
	Macaulay2/ComputationsBook/lncse-macros/Makefile \
	Macaulay2/ComputationsBook/proposals/Makefile \
	Macaulay2/ComputationsBook/util/Makefile \
	Macaulay2/Mathematica/Makefile \
	Macaulay2/Vasconcelos-appendix/Makefile \
	Macaulay2/basictests/Makefile \
	Macaulay2/benchmarks/Makefile \
	Macaulay2/benchmarks2/Makefile \
	Macaulay2/book/Makefile \
	Macaulay2/c/Makefile \
	Macaulay2/c2/Makefile \
	Macaulay2/d/Makefile \
	Macaulay2/dbm/Makefile \
	Macaulay2/docs/Makefile \
	Macaulay2/docs/nsf-final-report-2000/Makefile \
	Macaulay2/docs/nsf-proposal-1998/Makefile \
	Macaulay2/dumpdata/Makefile \
	Macaulay2/e/Makefile \
	Macaulay2/emacs/Makefile \
	Macaulay2/experiments/Makefile \
	Macaulay2/gmp-macros/Makefile \
	Macaulay2/html/Makefile \
	Macaulay2/mike-slides/Makefile \
	Macaulay2/mike-tut/Makefile \
	Macaulay2/packages/Makefile \
	Macaulay2/schubert/Makefile \
	Macaulay2/screen/Makefile \
	Macaulay2/slides/Makefile \
	Macaulay2/socket/Makefile \
	Macaulay2/test/Makefile \
	Macaulay2/tex/Makefile \
	Macaulay2/texmacs/Makefile \
	Macaulay2/thread/Makefile \
	Macaulay2/tutorial/Makefile \
	Macaulay2/util/Makefile
	)
